--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Presto.it</title>
+    <title>Presto -CORRI SUBITO QUI-</title>
 
     <!-- AoS CSS  -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -39,7 +39,7 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Prodotti</a>
+                        <a class="nav-link" href="Prodotti/prodotti.html">Prodotti</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -91,8 +91,8 @@
                     <button class="btn-custom">ESPLORA</button>
                 </div>
             </div>
-            <div class="col-12 col-md-4 d-lg-flex d-none justify-content-center align-items-center">
-                <img src="Media/prosciutti.jpg" alt="prosciutti appesi">
+            <div class="col-12 col-md-5 d-lg-flex d-none justify-content-center align-items-center">
+                <img src="Media/prosciutti.jpg" height="500px" alt="prosciutti appesi">
             </div>
         </div>
     </div>
